--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import './mixins.scss';
 @import './typography.scss';
 @import './utils.scss';
-@import './components/content_box.scss';
+@import './layout.scss';
+@import './components/content.scss';
 @import './components/buttons/button_default.scss';
